...
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="boolean" keyPath="accessibilityEnabled" value="YES"/>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabelText" value="gridBtn"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
...
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="boolean" keyPath="accessibilityEnabled" value="YES"/>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabelText" value="addBtn"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
...
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="제목을 입력하세요" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hpe-He-89y">
                                                        <rect key="frame" x="20" y="37" width="374" height="18"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="titleTf"/>
                                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
...
                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" text="내용을 입력하세요" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eUC-JB-qKG">
                                                        <rect key="frame" x="20" y="37" width="374" height="224.5"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="contentTv"/>
                                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t2C-80-y9M">
                                        <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
                                        <accessibility key="accessibilityConfiguration" identifier="saveBtn"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="60" id="RDO-FA-Xkn"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                        <state key="normal" title="추가">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="boolean" keyPath="accessibilityEnabled" value="YES"/>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabelText" value="deleteBtn"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="boolean" keyPath="accessibilityEnabled" value="YES"/>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabelText" value="editBtn"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                        <outlet property="deleteBarBtn" destination="koP-4k-gKd" id="5ik-WA-YU8"/>
                        <outlet property="editBarBtn" destination="hSm-Km-uzB" id="fWD-rr-Q5H"/>
                        <outlet property="imageCollectionView" destination="1tD-ZA-X2d" id="Jcf-Le-Rd3"/>
                        <outlet property="imageContainerView" destination="zwr-dN-DgN" id="aFr-Km-PJs"/>
                        <outlet property="titleTf" destination="Hpe-He-89y" id="Os8-yq-3q1"/>
...
