...
        }
        imagePicker.sourceType = .camera
        self?.present(imagePicker, animated: true, completion: nil)
      }

      // 외부링크 선택 액션
      let urlAction = UIAlertAction(title: "외부 이미지(URL)", style: .default) { _ in
        let inputAlert = UIAlertController(title: "외부 이미지 첨부", message: "이미지 URL을 입력하세요", preferredStyle: .alert)
        inputAlert.addTextField { (textField) in
          textField.placeholder = "https://example.com/image.png"
        }

        let okAction = UIAlertAction(title: "확인", style: .default, handler: { [weak self, weak inputAlert] (_) in
          // 유효한 URL인지 확인
          if let urlText = inputAlert?.textFields?[0].text,
            let url = URL(string: urlText),
            UIApplication.shared.canOpenURL(url) {

            let image = Image()
...
