...

      // 외부링크 선택 액션
      let urlAction = UIAlertAction(title: "ExternalImage".localized, style: .default) { _ in
        let inputAlert = UIAlertController(title: "AttachExternalImage".localized, message: "InputImageURL".localized, preferredStyle: .alert)
        inputAlert.addTextField { (textField) in
          textField.placeholder = "https://example.com/image.png"
          textField.accessibilityIdentifier = "imageUrlTf"
        }

        let okAction = UIAlertAction(title: "OK".localized, style: .default, handler: { [weak self, weak inputAlert] (_) in
          // 유효한 URL인지 확인
          if let urlText = inputAlert?.textFields?[0].text, let url = URL(string: urlText) {
            ImagePipeline.shared.loadImage(with: url) { result in
...
